# p3dx

./: README.md
p3dx_description/urdf/p3dx/: pioneer3dx.xacro
p3dx_description/urdf/sensors/: hokuyo_utm30lx.urdf.xacro  sensor_hokuyo_utm_gazebo.urdf.xacro
p3dx_gazebo/launch/: p3dx_gazebo.launch
p3dx_simulator/: CMakeLists.txt  package.xml
