<?xml version="1.0"?>
<package>
  <name>p3dx_simulator</name>
  <version>0.0.0</version>
  <description>Metapackage for Pioneer 3-DX mobile robot simulation software</description>

  <maintainer email="wenjian@mail.nankai.edu.cn">Jian Wen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>p3dx_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>